<resources>
    <string name="app_name" translatable="true">Sopela Music Transcriptor</string>
    <string name="filename_dialog_header" translatable="true">Insert new file name</string>
    <string name="ok" translatable="true">Ok</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="rec_folder">sopilaRecordings</string>
    <string name="duration_default">00 m 00 s</string>
    <string name="size_default">0 KB</string>
    <string name="pdf_folder">sopilaMusicSheets</string>
    <string name="server_ip_label">Edit server IP address</string>
    <string name="save_label">Save</string>
    <string name="ip_changed_info">IP address was successfully changed!</string>
    <string name="sp_secret_key">shared_preferences_sk</string>
    <string name="sp_ip_server_address">shared_pref_ip_address</string>
    <string name="sp_ip_server_address_default">sopila-audio.com</string>
    <string name="delete_label">Delete</string>
    <string name="delete_recording_warning">Delete recording %1$s?</string>
    <string name="delete_sheet_warning">Delete sheet %1$s?</string>
    <string name="rename_label">Rename</string>
    <string name="rename_title">Rename %1$s</string>
    <string name="export_label">Export as PDF</string>
    <string name="upload_success_message">"File was successfully uploaded"</string>
    <string name="upload_fail_message">"File upload failed"</string>
    <string name="download_success_message">"File was successfully downloaded"</string>
    <string name="download_inprogress">"File download in progress..."</string>
    <string name="download_fail_message">"Download failed"</string>
    <string name="test_pdf_view">Test PDFView</string>
    <string name="google_maps_key">AIzaSyA7lA0VBRml_jOAHKxQU9rxY0GrXdv0uqc</string>
    <string name="pdf_extra_key">PDF</string>
    <string name="location_success">Location successfully updated!</string>
    <string name="location_fail">Location not available. Ensure GPS is on.</string>
    <string name="location_not_available">Location not available</string>
    <string name="error_no_data">Error: No data</string>
    <string name="error_wrong_file_format">Wrong file format</string>
    <string name="error_file_not_found">File does not exist on disk</string>
    <string name="error_fetch_location">Could not fetch current location. Please try again.</string>
    <string name="error_opening_pdf">Error opening PDF</string>
    <string name="error_renaming_file">Error renaming file</string>
    <string name="error_deleting_file">Error deleting file</string>
    <string name="default_location_name">Pinezići, Hrvatska</string>
    <string name="no_recordings">No recordings yet</string>
    <string name="record_now">Record Now</string>
    <string name="record_first_audio">Start by recording your first audio session</string>
    <string name="mic_status">Microphone status</string>
    <string name="show_on_map">Show on map...</string>
    <string name="name_label">Name</string>
    <string name="available_storage">Available storage space: %1$s</string>
    <string name="filesize_label">Filesize: %1$s</string>
    <string name="audio_taken_label">Audio taken: %1$s</string>
    <string name="tab_recordings">Recordings</string>
    <string name="tab_record">Record</string>
    <string name="tab_sheets">Sheets</string>
</resources>
