<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".tab_fragments.TabFragment2"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- Container for Waveform Visualizer or Map -->
    <FrameLayout
        android:id="@+id/visualizer_map_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:layout_weight="0.45">

        <!-- Waveform Visualizer -->
        <com.example.arcibald160.sopilatranscriptor.helpers.VisualizerView
            android:id="@+id/visualizer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Map Container (Hidden by default) -->
        <FrameLayout
            android:id="@+id/inline_map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <!-- Back Button for Map -->
        <ImageButton
            android:id="@+id/close_map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_revert"
            android:tint="@android:color/white"
            android:visibility="gone" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/my_gray"
        android:layout_weight="0.35">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calendar_view"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/calendar_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/date_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                tools:text="26/May/2019"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/location_img_btn"
                android:layout_width="35dp"
                android:layout_height="29dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/location_general" />

            <TextView
                android:id="@+id/location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/location_not_available"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonFake"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/location_icon"
                android:text="@string/show_on_map"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/storage_img_view"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/storage_icon" />

            <TextView
                android:id="@+id/free_space"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                tools:text="Available storage space: 3.66 GB"
                android:textSize="13sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/status_img_view"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="fitXY"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/status" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/mic_status"
                android:textSize="13sp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="50dp"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/time_recorded"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_box"
            android:text="@string/duration_default"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center">

            <ToggleButton
                android:id="@+id/rec_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/ic_toggle"
                android:gravity="center"
                android:text=""
                android:textOff=""
                android:textOn=""/>

            <pl.bclogic.pulsator4droid.library.PulsatorLayout
                android:id="@+id/pulsator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                app:pulse_color="@color/red"
                app:pulse_count="4"
                app:pulse_duration="1000"
                app:pulse_interpolator="AccelerateDecelerate"
                app:pulse_repeat="0"
                app:pulse_startFromScratch="false" />

        </RelativeLayout>


        <TextView
            android:id="@+id/size_recorded"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_box"
            android:text="@string/size_default"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
